force-app/main/default/objects/Tabla_Volume_Adjustment__c/Tabla_Volume_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Tabla Volume Adjustment</label>
    <nameField>
        <displayFormat>VA-{0000}</displayFormat>
        <label>Correlativo Volume Adjustment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabla Volume Adjustment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>