force-app/main/default/objects/Tabla_Volume_Adjustment__c/fields/Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment__c</fullName>
    <label>Adjustment</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>