force-app/main/default/objects/Tabla_Volume_Adjustment__c/fields/Cap__c.field-meta.xml
<CustomField>
    <fullName>Cap__c</fullName>
    <description>Defines the adjustment cap for volumen range.</description>
    <label>Cap</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>