force-app/main/default/objects/Tabla_Volume_Adjustment__c/fields/Industry_Grade__c.field-meta.xml
<CustomField>
    <fullName>Industry_Grade__c</fullName>
    <label>Industry Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TG</fullName>
            </value>
            <value>
                <fullName>BG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>