force-app/main/default/objects/Tabla_Volume_Adjustment__c/fields/Vol_inf__c.field-meta.xml
<CustomField>
    <fullName>Vol_inf__c</fullName>
    <label>Vol inf</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>