force-app/main/default/objects/Tabla_Volume_Adjustment__c/fields/Vol_sup__c.field-meta.xml
<CustomField>
    <fullName>Vol_sup__c</fullName>
    <label>Vol sup</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>