force-app/main/default/objects/Tabla_Volume_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vol_inf__c</columns>
    <columns>Vol_sup__c</columns>
    <columns>Adjustment__c</columns>
    <columns>Cap__c</columns>
    <columns>Industry_Grade__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>