force-app/main/default/objects/Tabla_Volume_Adjustment__c/listViews/Volume_Table_BG.listView-meta.xml
<ListView>
    <fullName>Volume_Table_BG</fullName>
    <columns>NAME</columns>
    <columns>Vol_inf__c</columns>
    <columns>Vol_sup__c</columns>
    <columns>Adjustment__c</columns>
    <columns>Cap__c</columns>
    <columns>Industry_Grade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Industry_Grade__c</field>
        <operation>equals</operation>
        <value>BG</value>
    </filters>
    <label>Volume Table BG</label>
</ListView>